[Home]

Summary:ASTERISK-26850: res_hep_pjsip: Asterisk insert wrong protocol name in "Protocol ID" field in HEP packets
Reporter:Max Norba (miralin)Labels:
Date Opened:2017-03-09 08:28:00.000-0600Date Closed:2017-03-21 19:38:53
Priority:MinorRegression?No
Status:Closed/CompleteComponents:Resources/res_hep_pjsip
Versions:14.3.0 Frequency of
Occurrence
Constant
Related
Issues:
Environment:Centos 7, HOMER 5.0.5, PJSIP 2.5.5Attachments:( 0) 0001-res_hep-Capture-actual-transport-type-in-use.patch
Description:For clients that connect through TCP transport Asterisk insert in HEP packet  "UDP" in "Protocol ID" field. As we can see in payload in VIA header our client use TCP as transport:
{noformat}
HEP3 Protocol
   HEP ID: HEP3
   Length (Bytes): 1009
   Protocol family: IPv4
   Protocol ID: UDP
   Source port: 58926
   Destination port: 5060
   Timestamp: 1489067611
   Timestamp us: 879000
   Protocol Type: SIP
   Capture ID: 4321
   Source IP address: 192.168.10.63
   Destination IP address: 192.168.1.78
   Authentication Key: foo
   Correlation ID: NDE2YmJiYTA3M2EwMmZhYzQ5MDQ3ZWQ4ZmUyYmRhOWU.
   Payload [truncated]: REGISTER sip:192.168.1.78:5060 SIP/2.0\r\nVia: SIP/2.0/TCP 192.168.10.63:61255;branch=z9hG4bK-d8754z-a8057771fb6fc927-1---d8754z-;rport\r\nMax-Forwards: 70\r\nContact: <sip:1@192.168.10.63:61255;rinstance=bc512d3059da4
Session Initiation Protocol (REGISTER)
{noformat}
Comments:By: Asterisk Team (asteriskteam) 2017-03-09 08:28:01.157-0600

Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution.

A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report.

Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process].

By: Max Norba (miralin) 2017-03-09 08:58:47.782-0600

As I can see in source code of res_hep.c "Protocol ID" field is hardcoded to UDP.


By: Sean Bright (seanbright) 2017-03-21 07:01:53.759-0500

Potential patch attached. Could you give this a whirl and let me know your results?

By: Max Norba (miralin) 2017-03-21 07:06:25.761-0500

Yes, I will try it and give you report of result.

By: Max Norba (miralin) 2017-03-21 08:05:00.203-0500

When client use UDP all work correctly. With TCP client I see in HOMER on incoming packets UDP on outgoing TCP. As I see in your patch you add some code to logging_on_tx_msg() in res_hep_pjsip.c but maybe forget add same thing in logging_on_rx_msg()?

By: Sean Bright (seanbright) 2017-03-21 08:38:01.150-0500

Updated patch attached

By: Max Norba (miralin) 2017-03-21 09:58:06.107-0500

Now it's ok. Thank you for your diligence.

By: Friendly Automation (friendly-automation) 2017-03-21 19:38:54.076-0500

Change 5274 merged by zuul:
res_hep: Capture actual transport type in use

[https://gerrit.asterisk.org/5274|https://gerrit.asterisk.org/5274]

By: Friendly Automation (friendly-automation) 2017-03-21 19:48:27.193-0500

Change 5275 merged by zuul:
res_hep: Capture actual transport type in use

[https://gerrit.asterisk.org/5275|https://gerrit.asterisk.org/5275]

By: Friendly Automation (friendly-automation) 2017-03-21 19:48:30.097-0500

Change 5273 merged by zuul:
res_hep: Capture actual transport type in use

[https://gerrit.asterisk.org/5273|https://gerrit.asterisk.org/5273]